feat: add new link

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
         </li>
 
         <li>
+          <a href="https://bit.ly/3IC1e1s" target="_blank">
+            🚀 ToDo - Gerenciador de tarefas
+          </a>
+        </li>
+
+        <li>
           <a href="https://github.com/Azanniel/rentx" target="_blank">
             🚗 RentX
           </a>
